chore: adding tests
